# thread-digest-bot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py  thread.json
src/thread_digest_bot/: __init__.py  cli.py  config.py  digest.py  grounding.py  ingest.py  links.py  render.py  rollup.py  schedule.py  search.py  service.py  store.py  types.py
src/thread_digest_bot/llm/: __init__.py  anthropic.py  factory.py  fake.py  ollama.py  openai.py
tests/: conftest.py  test_cli.py  test_config_ingest.py  test_digest.py  test_digest_keys.py  test_grounding.py  test_links.py  test_llm_adapters.py  test_platform_adapters.py  test_platform_fake.py  test_public_api.py  test_render.py  test_schedule.py  test_search.py  test_service.py  test_store.py
